--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "karma": ">=0.12"
   },
   "devDependencies": {
-    "eslint": "^2.3.0"
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.0"
   },
   "dependencies": {
     "colors": "^1.1.2"
