--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A verbose Karma reporter for multi-browser runs.",
   "main": "reporter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Noirbot/karma-multibrowser-reporter.git"
   },
   "keywords": [
     "karma-plugin",
@@ -21,6 +24,6 @@
     "eslint-plugin-react": "^4.2.0"
   },
   "dependencies": {
-    "colors": "^1.1.2"
+    "chalk": "^1.1.1",
   }
 }
